# mu-gie

./: .gitignore  README.md  _config.yml  index.md  table.org
Mutation/: Mutation.cabal  README.md  TAGS  config.json  createConfigs.pl  package.yaml  stack.yaml
Mutation/app/: BMutation.hs  Main.hs
Mutation/src/: Interface.hs  Mutation.hs.backup  Renaming.hs  Testing.hs  Transformations.hs
Mutation/src/Boogie/: AST.hs  ErrorAccum.hs  MutationContext.hs  Parser.hs  Paths.hs  Position.hs  PrettyAST.hs  Tokens.hs  TypeChecker.hs  Util.hs
Mutation/test/: BoogieTesting.hs  MutationTesting.hs
Mutation/test/BoogieProgram/: GoTos.bpl  GoTos.bpl.smt2  IfSwap.bpl  SepA.bpl  SepB.bpl  TypeDecl.bpl  basicDaf.dfy  basicDaf.dfy.bpl  basicDafBPL.bpl  dup.bpl  live.bpl  live.bpl.smt2  sandbox.bpl  temp.smt2  testing.bpl  typeArgs.bpl
experiments/src/D_VSComp2010_Problem1-SumMax/: Problem1-SumMax.bpl
experiments/src/D_VSComp2010_Problem2-Invert/: Problem2-Invert.bpl
experiments/src/D_VSComp2010_Problem3-FindZero/: Problem3-FindZero.bpl
experiments/src/D_VSComp2010_Problem4-Queens/: Problem4-Queens.bpl
experiments/src/D_VSComp2010_Problem5-DoubleEndedQueue/: Problem5-DoubleEndedQueue.bpl
experiments/src/D_VSI-Benchmarks_b3/: b3.bpl
experiments/src/D_VSI-Benchmarks_b4/: b4.bpl
experiments/src/D_VSI-Benchmarks_b5/: b5.bpl
experiments/src/D_VSI-Benchmarks_b6/: b6.bpl
experiments/src/D_VSI-Benchmarks_b8/: b8.bpl
experiments/src/D_VerifyThis2015_Problem1/: Problem1.bpl
experiments/src/D_VerifyThis2015_Problem2/: Problem2.bpl
experiments/src/D_tutorial_maximum/: maximum.bpl
experiments/src/D_vacid0_Composite/: Composite.bpl
experiments/src/D_vstte2012_RingBuffer/: RingBuffer.bpl
experiments/src/D_vstte2012_Tree/: Tree.bpl
experiments/src/D_vstte2012_Two-Way-Sort/: Two-Way-Sort.bpl
experiments/src/P_arithmetic/: arithmetic.bpl
experiments/src/P_binary_search/: binary_search.bpl
experiments/src/P_boardgame1/: boardgame1.bpl
experiments/src/P_boardgame2/: boardgame2.bpl
experiments/src/P_closures/: closures.bpl
experiments/src/P_command/: command.bpl
experiments/src/P_composite/: composite.bpl
experiments/src/P_dll/: dll.bpl
experiments/src/P_dutch_flag/: dutch_flag.bpl
experiments/src/P_gcd/: gcd.bpl
experiments/src/P_hash_set/: hash_set.bpl
seeds/D_VSI-Benchmarks_b1/: b1.bpl
seeds/D_VSI-Benchmarks_b2/: b2.bpl
seeds/D_VSI-Benchmarks_b7/: b7.bpl
seeds/D_VerifyThis2015_Problem3/: Problem3.bpl
seeds/D_vacid0_LazyInitArray/: LazyInitArray.bpl
seeds/D_vacid0_SparseArray/: SparseArray.bpl
seeds/D_vstte2012_BreadthFirstSearch/: BreadthFirstSearch.bpl
seeds/D_vstte2012_Combinators/: Combinators.bpl
seeds/D_vstte2012_RingBufferAuto/: RingBufferAuto.bpl
seeds/P_arithmetic/: replace.pl
seeds/P_dancing/: dancing.bpl
seeds/P_iterator/: iterator.bpl
seeds/P_lcp/: lcp.bpl
seeds/P_marriage/: marriage.bpl
seeds/P_observer/: observer.bpl
seeds/P_relaxed_prefix/: relaxed_prefix.bpl
seeds/P_rotation/: rotation.bpl
seeds/P_sum_and_max/: sum_and_max.bpl
seeds/P_two_way_max/: two_way_max.bpl
seeds/P_two_way_sort/: two_way_sort.bpl
seeds/S_mvars211/: mvars211.bpl
seeds/S_mvars31/: mvars31.bpl
seeds/S_mvars61/: mvars61.bpl
seeds/S_mvars91/: mvars91.bpl
seeds/S_nifs01/: nifs01.bpl
seeds/S_nifs03/: nifs03.bpl
seeds/S_nifs04/: nifs04.bpl
seeds/S_nifs05/: nifs05.bpl
seeds/S_nifs09/: nifs09.bpl
seeds/S_sasgn151/: sasgn151.bpl
seeds/S_sasgn211/: sasgn211.bpl
seeds/S_sasgn31/: sasgn31.bpl
seeds/S_sif01/: sif01.bpl
seeds/S_sif03/: sif03.bpl
seeds/S_sif04/: sif04.bpl
seeds/S_sif10/: sif10.bpl
seeds/S_sif14/: sif14.bpl
seeds/S_sif16/: sif16.bpl
seeds/S_sif18/: sif18.bpl
(+41 files in other folders)
