name:                Mutation
version:             0.2.0.0
synopsis:            Boogie Mutant generation. 
description:         Boogie Mutation is a package providing collection of syntactical mutations on Boogie programs. 
homepage:            
license:             BSD3
license-file:        LICENSE
author:              Jeff Chen
maintainer:          yutingc@chalmers.se
copyright:           2017 Jeff Chen. 
category:            Language 
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:
              -- -fwarn-tabs
              -- -fwarn-incomplete-patterns
  exposed-modules:     Boogie.AST,
                       Boogie.Parser,
                       Boogie.Position,
                       Boogie.PrettyAST,
                       Boogie.Tokens,
                       Boogie.Util,
                       Boogie.ErrorAccum,
                       Boogie.TypeChecker,
                       Transformations,
                       Pretty,
                       Renaming,
                       Interface,
                       LemmaExplore

  build-depends:       QuickCheck >= 2.9.2
                     , aeson >= 1.0
                     , ansi-wl-pprint >=0.6
                     , base >= 4.7 && < 5
                     , bytestring >= 0.10.8.1
                     , cmdargs ==0.10.*
                     , containers >= 0.4
                     , containers >= 0.4
                     , directory >= 1.2.2.0
                     , hspec >= 2.2.4
                     , lens >= 4.0
                     , mtl >= 2.2.1
                     , parsec ==3.1.*
                     , random >= 1.1
                     , semigroups >= 0.18.2
                     , syb >= 0.6
                     , time >= 1.5.0.1
                     , transformers >= 0.4.2.0
                     , uniplate >= 1.6.12
                     , quickspec >= 2

  default-language:    Haskell2010

executable BMu
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -fwarn-tabs
                       -- -fwarn-incomplete-patterns
  build-depends:       Mutation
                     , aeson >= 1.0
                     , QuickCheck >= 2.9.2
                     , ansi-terminal >=0.5
                     , ansi-wl-pprint >=0.6
                     , base
                     , bytestring >= 0.10.8.1
                     , cmdargs ==0.10.*
                     , containers >= 0.4
                     , directory >= 1.2.2.0
                     , hspec >= 2.2.4
                     , lens >= 4.0
                     , mtl >= 2.2.1
                     , parsec ==3.1.*
                     , random >= 1.1
                     , semigroups >= 0.18.2
                     , syb >= 0.6
                     , time >= 1.5.0.1
                     , transformers >= 0.4.2.0
                     , uniplate >= 1.6.12
                     , quickspec >= 2

  default-language:    Haskell2010



test-suite Mutation-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       Mutation
                     , QuickCheck >= 2.9.2
                     , base
                     , bytestring >= 0.10.8.1
                     , random >= 1.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

-- source-repository head
--   type:     git
--   location: https://github.com/githubuser/Mutation
